/*
 * SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package dummylightcontroller;

service DummyLightController {
  rpc RequestEvent (PolicyLightOn) returns (Reply);
}

message PolicyLightOn {
  bool lightOn = 1;
}

message Reply {
  bool isOk = 1;
}
